<resources>
    <string name="app_name">TaskControll</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="my_tasks">My Tasks</string>
    <string name="tasks">Tasks</string>
    <string name="waiting_task_fragment">Waiting Task Fragment</string>
    <string name="title_friends">Friends</string>
    <string name="title_my_tasks">My Tasks</string>
    <string name="title_waiting_tasks">Waiting Tasks</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="task_theme">Task Theme</string>
    <string name="task_executor">Task Executor</string>
    <string name="task_creator_debug">Task Creator Debug</string>
    <string name="start_task_creator_service">Start Task Creator Service</string>
    <string name="stop_task_creator_service">Stop Task Creator Service</string>
    <string name="add_fake_task">Add Fake Task</string>
    <string name="clear_task_db">Clear Task DB</string>
    <string name="txt_send_request">Send Request</string>
    <string name="txt_login">Login</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="refresh_friends">Refresh Friends</string>
</resources>
