<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="40dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_start_service"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:text="@string/start_task_creator_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_stop_service"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:text="@string/stop_task_creator_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_add_fake_task"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:text="@string/add_fake_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_clear_task_db"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:text="@string/clear_task_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>